# predict-then-commit

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
configs/: paper.yaml  smoke.yaml
docs/: AI_USAGE.md  report.tex
results/provisional/: ablation_reward_components.csv  summary_metrics.csv
scripts/: evaluate.py  run_smoke.sh  train.py
src/ptc/: __init__.py  config.py  data.py  decoding.py  evaluate.py  logging_utils.py  metrics.py  model.py  plotting.py  policies.py  reproducibility.py  train.py
tests/: test_metrics.py
